# AliceVision

./: .gitignore
src/: CMakeLists.txt
src/aliceVision/: CMakeLists.txt
src/aliceVision/depthMap/: CMakeLists.txt  CustomPatchPatternParams.hpp  DepthMapEstimator.cpp  DepthMapEstimator.hpp  NormalMapEstimator.cpp  NormalMapEstimator.hpp  Refine.cpp  Refine.hpp  Sgm.cpp  Sgm.hpp  computeOnMultiGPUs.hpp  depthMapApi.hpp
src/aliceVision/depthMap/cuda/device/: DeviceCameraParams.dp.cpp  DeviceCameraParams.dp.hpp  DevicePatchPattern.dp.cpp  DevicePatchPattern.dp.hpp  Patch.cuh  Patch.dp.hpp  SimStat.dp.hpp  buffer.cuh  buffer.dp.hpp  color.dp.hpp  color.dpp.hpp  customDataType.dp.hpp  eig33.dp.hpp  matrix.dp.hpp
src/aliceVision/depthMap/cuda/host/: DeviceCache.cpp  DeviceCache.hpp  DeviceMipmapImage.cpp  DeviceMipmapImage.cpp.cu  DeviceMipmapImage.hpp  DeviceMipmapImage.hpp.cu  DeviceStreamManager.cpp  DeviceStreamManager.hpp  MemoryLocker.hpp  memory.hpp  patchPattern.cpp  utils.hpp
src/aliceVision/depthMap/cuda/imageProcessing/: deviceColorConversion.cpp  deviceColorConversion.cu  deviceColorConversion.dp.cpp  deviceColorConversion.dp.hpp  deviceColorConversion.hpp  deviceGaussianFilter.cu  deviceGaussianFilter.dp.cpp  deviceGaussianFilter.dp.hpp  deviceGaussianFilter.hpp  deviceMipmappedArray.cu  deviceMipmappedArray.dp.cpp  deviceMipmappedArray.hpp
src/aliceVision/depthMap/cuda/planeSweeping/: deviceDepthSimilarityMap.dp.cpp  deviceDepthSimilarityMap.hpp  deviceDepthSimilarityMapKernels.cuh  deviceDepthSimilarityMapKernels.dp.hpp  deviceSimilarityVolume.cu  deviceSimilarityVolume.dp.cpp  deviceSimilarityVolume.hpp  deviceSimilarityVolumeKernels.cuh  deviceSimilarityVolumeKernels.dp.hpp  similarity.hpp
src/aliceVision/image/: io.cpp
src/dpct_output/aliceVision/depthMap/: BufPtr.hpp  BufPtr.hpp.yaml  DepthMapEstimator.cpp.dp.cpp  Refine.cpp.dp.cpp  Refine.hpp  Refine.hpp.yaml  Sgm.cpp.dp.cpp  Sgm.hpp  Sgm.hpp.yaml  depthMapUtils.cpp.dp.cpp  depthMapUtils.hpp  depthMapUtils.hpp.yaml  volumeIO.hpp.yaml
src/dpct_output/aliceVision/depthMap/cuda/device/: DeviceCameraParams.dp.cpp  DeviceCameraParams.hpp  DevicePatchPattern.dp.cpp  DevicePatchPattern.hpp  Patch.dp.hpp  SimStat.dp.hpp  buffer.dp.hpp  color.dp.hpp  eig33.dp.hpp  matrix.dp.hpp  operators.dp.hpp
src/dpct_output/aliceVision/depthMap/cuda/host/: DeviceCache.cpp.dp.cpp  DeviceMipmapImage.cpp.dp.cpp  DeviceStreamManager.cpp.dp.cpp  DeviceStreamManager.hpp  divUp.hpp  patchPattern.cpp.dp.cpp  utils.cpp.dp.cpp  utils.hpp
src/dpct_output/aliceVision/depthMap/cuda/imageprocessing/: deviceColorConversion.dp.cpp  deviceColorConversion.hpp  deviceGaussianFilter.dp.cpp  deviceMipmappedArray.dp.cpp
src/dpct_output/aliceVision/depthMap/cuda/planesweeping/: deviceDepthSimilarityMap.dp.cpp  deviceDepthSimilarityMap.hpp  deviceDepthSimilarityMapKernels.dp.hpp  deviceSimilarityVolume.dp.cpp  deviceSimilarityVolume.hpp  deviceSimilarityVolumeKernels.dp.hpp  similarity.hpp
src/dpct_output/alicevision/depthmap/: SgmDepthList.cpp.dp.cpp  volumeIO.cpp.dp.cpp  volumeIO.hpp
src/dpct_output/alicevision/depthmap/cuda/device/: color.dp.hpp
src/dpct_output/alicevision/depthmap/cuda/host/: DeviceMipmapImage.hpp  memory.hpp
src/dpct_output/alicevision/depthmap/cuda/imageprocessing/: deviceGaussianFilter.hpp  deviceMipmappedArray.hpp
src/software/utils/: CMakeLists.txt  main_compareFolders.cpp
